--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
           <section class="hero">
          
-              <h1 class="title">Save money. <br>Live better.</h1>
+              <h1 class="title js_main-title"></h1>
           
           </section>
         </div>
