--- a/product-page.html
+++ b/product-page.html
@@ -145,7 +145,7 @@
     
 
 
-
+    <script type='text/javascript' src='https://thebestproductmanager.com/products/prices-nxg-object'></script>
     <script type="module" src="./js/product.js"></script>
     <script type="module" src="./js/prod-preview.js"></script>
     <script type="module" src="./js/calculate-total.js"></script>
